Revert jdk 9  ideom list.of(...)